@@ -16,10 +16,23 @@
 
 """Display what revisions are missing in 'other' from 'this' and vice versa."""
 
+from bzrlib.log import(
+    LogRevision,
+    )
+from bzrlib.symbol_versioning import(
+    deprecated_function,
+    zero_seventeen,
+    )
 import bzrlib.ui as ui
 
 
+@deprecated_function(zero_seventeen)
 def iter_log_data(revisions, revision_source, verbose):
+    for revision in iter_log_revisions(revisions, revision_source, verbose):
+        yield revision.revno, revision.rev, revision.delta
+
+
+def iter_log_revisions(revisions, revision_source, verbose):
     last_tree = revision_source.revision_tree(None)
     last_rev_id = None
     for revno, rev_id in revisions:
@@ -37,7 +50,7 @@ def iter_log_data(revisions, revision_source, verbose):
             delta = revision_tree.changes_from(parent_tree)
         else:
             delta = None
-        yield revno, rev, delta
+        yield LogRevision(rev,revno,delta=delta)
 
 
 def find_unmerged(local_branch, remote_branch):
